--- a/PlantBase/app/src/main/AndroidManifest.xml
+++ b/PlantBase/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
             android:resource="@array/preloaded_fonts" />
 
         <activity android:name=".MyPLantActivity" />
-        <activity android:name=".AccountActivity"></activity>
+        <activity android:name=".AccountActivity" />
+        <activity android:name=".AddPlantActivity"></activity>
     </application>
 
 </manifest>
