--- a/PlantBase/app/src/main/AndroidManifest.xml
+++ b/PlantBase/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".SearchActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppThemeNoTopBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,11 +21,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SearchList" />
-        <activity android:name=".PlantInfoActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".MyPlantsList" />
-        <activity android:name=".LinkingActivity" />
+        <activity android:name=".SearchList"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".PlantInfoActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".LoginActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MyPlantsList"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".LinkingActivity"
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="preloaded_fonts"
