--- a/PlantBase/app/src/main/AndroidManifest.xml
+++ b/PlantBase/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SearchActivity"
+            android:name=".Activities.SearchActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppThemeNoTopBar">
             <intent-filter>
@@ -27,32 +27,32 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SearchList"
+        <activity android:name=".Activities.SearchListActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".PlantInfoActivity"
+        <activity android:name=".Activities.PlantInfoActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".LoginActivity"
+        <activity android:name=".Activities.LoginActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".MyPlantsList"
+        <activity android:name=".Activities.MyPlantsListActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".LinkingActivity"
+        <activity android:name=".Activities.LinkingActivity"
             android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".MyPlantActivity" />
-        <activity android:name=".AccountActivity" />
+        <activity android:name=".Activities.MyPlantActivity" />
+        <activity android:name=".Activities.AccountActivity" />
         <!--<activity android:name=".AddPlantActivity"></activity>-->
 
         <service
-            android:name="thomas.jansen.plantbase.BackgroundTask"
+            android:name="thomas.jansen.plantbase.Notification.BackgroundTask"
             android:enabled="true" >
         </service>
 
         <receiver
-            android:name="thomas.jansen.plantbase.SensorRestarterBroadcastReceiver"
+            android:name="thomas.jansen.plantbase.Helpers.SensorRestarterBroadcastReceiver"
             android:enabled="true"
             android:exported="true"
             android:label="RestartServiceWhenStopped">
